test/render/fixtures/error-invalid-if-else-if-tag/error.txt
Error: An error occurred while trying to compile template at path "/Users/dpiercey/Development/projects/marko/test/render/fixtures/error-invalid-if-else-if-tag/template.marko". Error(s) in template:
1) [test/render/fixtures/error-invalid-if-else-if-tag/template.marko:4:0] Invalid expression for else-if statement:

Unexpected identifier: (true foo)
                             ^

    at handleErrors (/Users/dpiercey/Development/projects/marko/src/compiler/Compiler.js:82:21)
    at Compiler.compile (/Users/dpiercey/Development/projects/marko/src/compiler/Compiler.js:155:9)
    at _compile (/Users/dpiercey/Development/projects/marko/src/compiler/index.js:99:33)
    at Object.compile (/Users/dpiercey/Development/projects/marko/src/compiler/index.js:113:12)
    at doLoad (/Users/dpiercey/Development/projects/marko/src/loader/index-default.js:156:45)
    at Object.load (/Users/dpiercey/Development/projects/marko/src/loader/index-default.js:44:20)
    at runRenderTest (/Users/dpiercey/Development/projects/marko/test/__util__/runRenderTest.js:122:23)
    at run (/Users/dpiercey/Development/projects/marko/test/render/html.test.js:17:9)
    at autoTest (/Users/dpiercey/Development/projects/marko/test/autotest.js:137:5)
    at Context.<anonymous> (/Users/dpiercey/Development/projects/marko/test/autotest.js:175:21)
    at callFnAsync (/Users/dpiercey/Development/projects/marko/node_modules/mocha/lib/runnable.js:371:21)
    at Test.Runnable.run (/Users/dpiercey/Development/projects/marko/node_modules/mocha/lib/runnable.js:318:7)
    at Runner.runTest (/Users/dpiercey/Development/projects/marko/node_modules/mocha/lib/runner.js:443:10)
    at /Users/dpiercey/Development/projects/marko/node_modules/mocha/lib/runner.js:549:12
    at next (/Users/dpiercey/Development/projects/marko/node_modules/mocha/lib/runner.js:361:14)
    at /Users/dpiercey/Development/projects/marko/node_modules/mocha/lib/runner.js:371:7
    at next (/Users/dpiercey/Development/projects/marko/node_modules/mocha/lib/runner.js:295:14)
    at Immediate.<anonymous> (/Users/dpiercey/Development/projects/marko/node_modules/mocha/lib/runner.js:339:5)
    at runCallback (timers.js:785:20)
    at tryOnImmediate (timers.js:747:5)
    at processImmediate [as _immediateCallback] (timers.js:718:5)